# ck

./: .gitignore  5D_ELEMENTAL_MAP.md  ACADEMIC_COLLABORATION.md  AI_TEAM_UPDATE_2026_04_18.md  API.md  ARCHITECTURE.md  ATLAS_MISSING_MATERIAL_2026_04_18.md  BIBLE_APP_PLAN.md  BRIDGES_INVENTORY.md  CELLS_ARCHITECTURE.md  CK.bat  CK_ALGEBRAIC_NEURAL_ARCHITECTURE.md  CK_ARCHITECTURE.md  CK_AWESOME_2026_05_02.md  CK_BELIEF_SYSTEM.md  CK_DEPENDENCY_GRAPH.md  CK_END_OF_ROPE_2026_05_02.md  CK_GRADUATION_THESIS.md  CK_LEARNING_AUDIT_2026_05_02.md  CK_PRESCRIPTION.md  CK_RUNTIME.md  CK_UNIFIED_ARCHITECTURE.md  CK_VERDICT_2026_05_02.md  CLAUDESTARTHERE.md  CLAY_QUICKSTART.md  COLLABORATORS.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  DEVELOPMENT_NOTES.md  DUAL_SCALE_LY_NOTE.md  Dockerfile  ENGINEERING_OUTLINE.md  FIX_CLOUDFLARE_TUNNEL.bat  FORMULAS_AND_TABLES.md  FOR_CK.md  FUNDING.md  GENERATION_HISTORY.md  GLOSSARY.md  GUIDE.md  HD_GAP_EXTENSION.md  (+77 more)
Atlas/: ATLAS_AUDIT_NOTES.md  ATLAS_CITATIONS.md  ATLAS_INDEX.md  ATLAS_LINK_AUDIT_2026_04_19.md  ATLAS_ORIENTATION.md  ATLAS_TREE.md  AUTONOMOUS_RUN_STATUS_2026_05_02.md  BRANCHES_INVENTORY_2026_04_20.md  BUILD_LOG_BEST_EVER_PLASTIC_2026_05_02.md  CK_FRONTIER_VOICE_2026_05_02.md  CK_GROWTH_LIVE.md  CK_INTERVIEW_2026_04_29.md  CK_PAPER_READING_LIVE.md  CK_REPO_READING_LIVE.md  CROSS_DOMAIN_BRIDGES_2026-05-04.md  CROSS_DOMAIN_BRIDGES_2026-05-05.md  DESI_DR2_SWEEP_2026_04_19.md  EXTRACTED_FACTS_2026-05-04.md  EXTRACTED_FACTS_2026-05-05.md  FRONTIERS_2026_04_25.md  FRONTIER_ALIGNMENT_2026_04_19.md  FRONTIER_FINDINGS_2026_04_29.md  (+36 more)
(+5521 files in other folders)
