[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coherence-keeper"
version = "1.0.0"
description = "CK — A Sinc² Spectral Field in Prime Arithmetic (TIG Framework)"
authors = [
    { name = "Brayden Ross Sanders / 7Site LLC" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Core theorem verification: no dependencies (stdlib only)
dependencies = []

[project.optional-dependencies]
# For sinc_demo.py visualization
viz = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
# For CK Organism simulation (ck_sim/)
sim = [
    "numpy>=1.24",
    "kivy>=2.3.0",
    "sounddevice>=0.4.6",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
# For development / testing
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.1",
]

[project.urls]
"Homepage" = "https://github.com/TiredofSleep/ck"
"DOI" = "https://doi.org/10.5281/zenodo.18852047"
"Bug Tracker" = "https://github.com/TiredofSleep/ck/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["ck_sim*"]
